Create class .operator for styling operators

--- a/style.css
+++ b/style.css
@@ -23,3 +23,26 @@ table {
   border-radius: 50px;
   color: #FFF;
 }
+
+.operator {
+  width: 70px;
+  height: 70px;
+  font-size: 3em;
+  background-color: #000;
+  border-color: #000;
+  color: #FFF;
+  border-radius: 50px;
+  border-style: solid;
+  border-width: 2px;
+  padding-bottom: 10px;
+}
+
+.operator:hover {
+  background-color: #FFF;
+  color: #000;
+  border-color: #000;
+  border-radius: 50px;
+  border-style: solid;
+  border-width: 2px;
+  padding-bottom: 10px;
+}
