--- a/style.css
+++ b/style.css
@@ -46,3 +46,26 @@ table {
   border-width: 2px;
   padding-bottom: 10px;
 }
+
+.clear {
+  width: 70px;
+  height: 70px;
+  font-size: 3em;
+  background-color: #FF0000;
+  border-color: #FF0000;
+  color: #FFF;
+  border-radius: 50px;
+  border-style: solid;
+  border-width: 2px;
+  padding-bottom: 5px;
+}
+
+.clear:hover {
+  background-color: #FFF;
+  color: #FF0000;
+  border-color: #FF0000;
+  border-radius: 50px;
+  border-style: solid;
+  border-width: 2px;
+  padding-bottom: 5px;
+}
